--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "hardhat-project",
   "scripts": {
@@ -45,7 +44,9 @@
     "typescript": "^4.5.2"
   },
   "devDependencies": {
-    "hardhat-deploy": "0.8.9",
-    "@uniswap/lib": "4.0.1-alpha"
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomiclabs/buidler": "^1.4.8",
+    "@uniswap/lib": "4.0.1-alpha",
+    "hardhat-deploy": "0.8.9"
   }
 }
